@@ -1,3 +1,8 @@
+Wed, 13 Dec 2006 01:14:41 +0100 <thp@perli.net>
+        * src/gpodder/gpodder.py: Code to support new style episode info 
+          dialog
+        * data/gpodder.glade: New style for your neat episode info dialog
+
 Wed, 13 Dec 2006 00:17:40 +0100 <thp@perli.net>
         * src/gpodder/gpodder.py: Fix location of gPodder icon file
         * setup.py: Install gPodder 48x48 icon in /usr/share/gpodder for 
